# LeafLink

./: .gitignore  LICENSE.txt  MANIFEST.in  README.en.md  README.md  README.zh.md  gitignore.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: leafignore.example
scripts/: build_dist.py  release.sh
src/leaflink/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/leaflink/auth/: browser_login.py  cookie_import.py  manager.py
src/leaflink/client/: __init__.py  models.py  overleaf_client.py  playwright_bridge.py
src/leaflink/project/: __init__.py  metadata.py
src/leaflink/sync/: __init__.py  conflict.py  diff.py  engine.py  ignore.py  state.py  watcher.py
src/leaflink/utils/: console.py  hashing.py  locks.py  logging.py  paths.py  time.py
tests/: test_browser_login.py  test_cli_smoke.py  test_conflict.py  test_diff.py  test_hashing.py  test_ignore.py  test_overleaf_client.py  test_playwright_bridge.py  test_state.py  test_sync_engine.py
