[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaflink"
version = "0.1.0"
description = "A modern CLI for syncing local directories with Overleaf projects."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [
  { name = "leaflink contributors" }
]
keywords = ["overleaf", "latex", "cli", "sync"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = ["merge3>=0.0.16"]

[project.urls]
Homepage = "https://github.com/xiongqi123123/LeafLink"
Repository = "https://github.com/xiongqi123123/LeafLink"
Issues = "https://github.com/xiongqi123123/LeafLink/issues"

[project.optional-dependencies]
browser = ["playwright>=1.42.0"]
watch = ["watchdog>=4.0.0"]
html = ["beautifulsoup4>=4.12.0"]
http = ["httpx>=0.27.0"]
dev = ["build>=1.2.2", "pytest>=8.0.0", "twine>=5.1.1"]
all = [
  "merge3>=0.0.16",
  "playwright>=1.42.0",
  "watchdog>=4.0.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "build>=1.2.2",
  "pytest>=8.0.0",
  "twine>=5.1.1",
]

[project.scripts]
leaflink = "leaflink.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
